--- a/abstracts/mixins/positions.styl
+++ b/abstracts/mixins/positions.styl
@@ -64,3 +64,17 @@ absolute()
 
 relative()
   -pos('relative', arguments)
+
+abs-center()
+  position absolute
+  top 50%
+  right 50%
+  transform translate(50%, -50%)
+abs-v-center()
+  position absolute
+  top 50%
+  transform translateY(-50%)
+abs-h-center()
+  position absolute
+  right 50%
+  transform translateX(50%)
